# ManagementApp

./: .gitignore  README.md  default.gel  defaultAfter.gel
BackEnd/: .env  pyproject.toml  pyrightconfig.json  requirements.txt  text.txt
BackEnd/.zed/: settings.json
BackEnd/dbschema/: default.gel
BackEnd/dbschema/migrations/: 00001-m1blrx2.edgeql  00001-m1ewy33.edgeql  00001-m1ry6ic.edgeql  00001-m1zvf2n.edgeql  00002-m1b56qx.edgeql  00002-m1e2r4d.edgeql  00002-m1ei2o4.edgeql  00002-m1wri6u.edgeql  00003-m17kiyx.edgeql  00003-m1bvxeo.edgeql  00003-m1elyqt.edgeql  00003-m1obl55.edgeql  00004-m1dmbob.edgeql  00004-m1g7xw4.edgeql  00004-m1o4fca.edgeql  00004-m1vdypn.edgeql  00005-m1aazte.edgeql  00005-m1i4efg.edgeql  00005-m1kjykt.edgeql  00005-m1vnjhx.edgeql  00006-m1cf3iw.edgeql  00006-m1evcqd.edgeql  00006-m1jpcm5.edgeql  00006-m1youzn.edgeql  00007-m12kqmn.edgeql  00007-m1rkyjl.edgeql  00007-m1s4vkm.edgeql  00007-m1tan7u.edgeql  00007-m1ubh2k.edgeql  00008-m14gidy.edgeql  00008-m15lilj.edgeql  00008-m1scp77.edgeql  00008-m1uohmq.edgeql  00008-m1zuycq.edgeql  00009-m137nb5.edgeql  00009-m1err5z.edgeql  00009-m1invy3.edgeql  00009-m1ubfbu.edgeql  00009-m1uvkwj.edgeql  00010-m14rkve.edgeql  (+49 more)
BackEnd/src/: main.py  settings.py
BackEnd/src/dependencies/: auth.py  db.py  email.py  loggingMiddleware.py  pkce_helpers.py  pwHash.py  response_decorator.py
BackEnd/src/features/auth/: crud.py  endpoints.py  schema.py
BackEnd/src/features/entity/: crud.py  endpoints.py  schema.py
BackEnd/src/features/generics/: crud.py  schema.py
BackEnd/src/features/movement/: crud.py  endpoints.py  schema.py
BackEnd/src/features/record/: crud.py  endpoints.py  schema.py
BackEnd/src/features/scheduler/: crud.py  endpoints.py  schema.py
BackEnd/src/features/user/: crud.py  endpoints.py  schema.py
BackEnd/src/queries/entity/: CreateAddress.edgeql  CreateAddress_async_edgeql.py  CreateContact.edgeql  CreateContact_async_edgeql.py  CreateEntity.edgeql  CreateEntity_async_edgeql.py  CreatePhoneNumber.edgeql  CreatePhoneNumber_async_edgeql.py  DeleteAddress.edgeql  DeleteAddress_async_edgeql.py  DeleteContact.edgeql  DeleteContact_async_edgeql.py  DeleteEntity.edgeql  DeleteEntity_async_edgeql.py  DeletePhoneNumber.edgeql  DeletePhoneNumber_async_edgeql.py  GetEntity.edgeql  GetEntity_async_edgeql.py  UpdateAddress.edgeql  UpdateAddress_async_edgeql.py  UpdateContact.edgeql  UpdateContact_async_edgeql.py  UpdateEntity.edgeql  UpdateEntity_async_edgeql.py
BackEnd/src/static/: index.html
BackEnd/static/: index.html
BackEnd/static/assets/: BoardView-CcWlR3Ou.js  EntityView-BXSzmi1G.js  MovementView-B0Rk3-6U.js  PaymentView-CNQyZ9y5.js  RecordView-egjIOEHw.js  SchedulerView-COzUrFD3.js  SettingsView-CSNMBxA8.js  UserView-C1FmuMI5.js  index-BscBU8kg.css  index-DpeE4wFZ.js  style-Bat5Xyzz.js
BackEnd/tests/: README.md  test_auth_endpoints.py  test_entity_endpoints.py  test_movement_endpoints.py  test_record_endpoints.py  test_scheduler_endpoints.py  test_user_endpoints.py  test_utils.py
SPA/src/rust-helpers/: Cargo.toml
SPA/src/rust-helpers/src/: helper.rs  (+1 more)
(+265 files in other folders)
