[package]
name = "rust-helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
chrono = "0.4"
rust_decimal = "1.37.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
js-sys = "0.3"
serde-wasm-bindgen = "0.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
